Fixed project card spacing

--- a/styles.css
+++ b/styles.css
@@ -552,6 +552,10 @@ nav ul li a:hover {
   max-width: 380px;
 }
 
+.project-card p {
+  margin-bottom: 2rem;
+}
+
 .project-card:hover {
   transform: translateY(-10px);
 }
@@ -575,7 +579,6 @@ nav ul li a:hover {
   bottom: 10px;
   display: flex;
   gap: 0.5rem;
-  margin: 0.2rem 0;
 }
 
 .language-icon {
